# oauth_mocker

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: docker-publish.yml
src/: main.rs
templates/: login.html
